[project]
name = "radium226"
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv]
package = false

[tool.uv.sources]
radium226-pg = { workspace = true }
radium226-pg_proxy = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "temppathlib>=1.2.0",
]
